--- a/todo-list/tsconfig.json
+++ b/todo-list/tsconfig.json
@@ -14,13 +14,11 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env",
+      "webpack-env", 
       "vuetify"
     ],
     "paths": {
-      "@/*": [
-      "src/*"
-      ]
+      "@/*": ["src/*"]
     },
     "lib": [
       "esnext",
