--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -15,6 +15,7 @@
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
